--- a/style/popup.sass
+++ b/style/popup.sass
@@ -42,3 +42,5 @@ body
                         color: #ffffff
                         border-radius: 10px
                         padding: 10px 0
+        .prower-by
+            margin: 5px
